# computer-science-journey

./: .gitignore
semester-05/: .gitignore
semester-05/CG LAB/Exp-01/: CMakeLists.txt  main.cpp
semester-05/CG LAB/Exp-02/: main.cpp
semester-05/CG LAB/Exp-03/: main.cpp
semester-05/CG LAB/Exp-04/: main.cpp
semester-05/CG LAB/Exp-05/: main.cpp
semester-05/CG LAB/Exp-06/: main.cpp
semester-05/CG LAB/Exp-07/: main.cpp
semester-05/CG LAB/Exp-08/: main.cpp
semester-05/CG LAB/Exp-09/: main.cpp
semester-05/CG LAB/Exp-10/: main.cpp
semester-05/CG LAB/Exp-11/: main.cpp
semester-05/CG LAB/Exp-12/: main.cpp
semester-05/CG LAB/Exp-13/: main.cpp
semester-05/CG LAB/Exp-14/: main.cpp
semester-05/CG LAB/Exp-15/: main.cpp
semester-05/CG LAB/Exp-16/: main.cpp
semester-05/CG LAB/Exp-17/: main.cpp
semester-05/CG LAB/Exp-18/: main.cpp
semester-05/crt-simulation/: .gitignore  2D CRT Version  CMakeLists.txt  CRT_2D.cpp  CRT_3D.cpp  README.md
